fix favicon link and uncomment audio

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>The Adventures of Mancomb Seepgood</title>
-  <link rel="icon" type="image/png" href="/mancomb/grog.png">
+  <link rel="icon" type="image/png" href="./mancomb/grog.png">
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <!--
+  
   <iframe src="./mancomb/Track12.mp3" allow="autoplay" style="display:none" id="iframeAudio">
   </iframe> 
   <audio autoplay controls loop id="playAudio">
     <source src="./mancomb/Track12.mp3" type="audio/ogg">
     Your browser does not support the audio element.
   </audio>
-  -->
+  
   
   <img src="./mancomb/capa.png" id="top">
   
