try to autoplay audio

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-  
+  <!--
   <iframe src="./mancomb/Track12.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-  </iframe> 
-  <audio autoplay controls loop id="playAudio">
+  </iframe>
+  -->
+  <audio autoplay="true" controls loop id="playAudio">
     <source src="./mancomb/Track12.mp3" type="audio/ogg">
     Your browser does not support the audio element.
   </audio>
