--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <iframe src="./mancomb/Track12.mp3" allow="autoplay" style="display:none" id="iframeAudio">
   </iframe>
   -->
-  <audio autoplay="true" controls loop id="playAudio">
-    <source src="./mancomb/Track12.mp3" type="audio/ogg">
+  <audio autoplay="true" src="./mancomb/Track12.mp3">
     Your browser does not support the audio element.
   </audio>
   
