--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <br><br><br><br>
-  <audio autoplay controls loop id="playAudio">
+  <audio autoplay controls loop id="playAudio" style="margin: 0 auto; display: block;">
     <source src="./mancomb/Track12.mp3" type="audio/ogg">
     Your browser does not support the audio element.
   </audio>
